# Computeranalysis

./: README.md  pyproject.toml
computeranalysis/: computeranalysis.py  example_usecase.py
