[project]
name = "computeranalysis"
version = "1.0.0"
description = "Package for playing with elementary functions"
readme = "README.md"
requires-python = ">=3.12"
license = None
authors = [{ name = "Tobias Ocula", email = "tobias.ocula@outlook.com" }]
classifiers = [
    "Programming Language :: Python :: 3"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
